[package]
name = "test_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "*"
gl = "*"
minifb = "*"
chrono = "*"
uuid = {version= "1", features = ["v4"]}

[workspace]

members = [
    "engine_tester"
]